# MJPEGWriter

./: CMakeLists.txt  MJPEGReader.py  MJPEGWriter.cpp  README.md  compile.sh  main.cpp
